# document-processing-ollama

./: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
document_processing_ollama/: document_loader.py  ollama_service.py  post_processing.py  run.py
input/txt/: invoice_0.pdf.txt  invoice_1.pdf.txt  invoice_2.pdf.txt  invoice_3.pdf.txt  invoice_4.pdf.txt  invoice_5.pdf.txt  invoice_6.pdf.txt  invoice_7.pdf.txt  invoice_8.pdf.txt  invoice_9.pdf.txt
prompts/: json-extraction.j2
